--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -1,32 +1,45 @@
-<div id="<%= dom_id heading %>" style="padding-left: 10px; border-left: 3px solid <%= depth_color(heading.depth) %>; border-radius: 5px">
-  <strong>
-    <% if heading.status.present? %>
-      <%= heading.status %>
-    <% end %>
-    <%= link_to heading.title, heading %>
-  </strong>
-  <%= link_to "edit", edit_heading_path(heading) %>
-  <%= button_to "delete", heading, method: :delete, form: { style: "display: inline-block" }, data: { turbo_confirm: 'message' } %>
+<div id="<%= dom_id heading %>" style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(heading.depth) %>; border-radius: 5px">
+  <details open>
+    <summary>
+      <strong>
+        <% if heading.status.present? %>
+          <%= heading.status %>
+        <% end %>
+        <%= link_to heading.title, heading %>
+      </strong>
+      <small>
+        (<%= heading.headings.size %>)
+      </small>
+      <%= link_to "edit", edit_heading_path(heading) %>
+      <%= button_to "delete", heading, method: :delete, style: "line-height: 1.1; border-radius: 4px", form: { style: "display: inline-block" }, data: { turbo_confirm: 'message' } %>
+    </summary>
+    <div>
+      <% if heading.deadline %>
+        <p>
+          <strong>Deadline:</strong>
+          <%= heading.deadline %>
+        </p>
+      <% end %>
 
-  <div>
-    <% if heading.deadline %>
-      <p>
-        <strong>Deadline:</strong>
-        <%= heading.deadline %>
-      </p>
-    <% end %>
+      <% if heading.scheduled %>
+        <p>
+          <strong>Scheduled:</strong>
+          <%= heading.scheduled %>
+        </p>
+      <% end %>
 
-    <% if heading.scheduled %>
-      <p>
-        <strong>Scheduled:</strong>
-        <%= heading.scheduled %>
-      </p>
-    <% end %>
+      <p style="white-space: pre-wrap"><%= heading.body %></p>
+      
+      <% heading.headings.each do |child| %>
+        <%= render child %>
+      <% end %>
 
-    <p style="white-space: pre-wrap"><%= heading.body %></p>
-    
-    <% heading.headings.each do |child| %>
-      <%= render child %>
-    <% end %>
-  </div>
+      <%= form_with(model: Heading.new) do |form| %>
+        <%= form.text_field :title, placeholder: '+', style: 'border: none' %>
+        <%= form.hidden_field :parent_id, value: heading.id %>
+      <% end %>
+    </div>
+
+  </details>
+
 </div>
