--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -1,5 +1,5 @@
-<div id="<%= dom_id heading %>" style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(heading.depth) %>; border-radius: 5px">
-  <details open>
+<div id="<%= dom_id heading %>" data-controller="heading" data-heading-id-value="<%= heading.id %>" style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(heading.depth) %>; border-radius: 5px">
+  <details data-heading-target="details" data-action="heading#toggle">
     <summary>
       <strong>
         <% if heading.status.present? %>
@@ -11,7 +11,7 @@
         (<%= heading.headings.size %>)
       </small>
       <%= link_to "edit", edit_heading_path(heading) %>
-      <%= button_to "delete", heading, method: :delete, style: "line-height: 1.1; border-radius: 4px", form: { style: "display: inline-block" }, data: { turbo_confirm: 'message' } %>
+      <%= button_to "delete", heading, method: :delete, style: "line-height: 1.1; border-radius: 4px", form: { style: "display: inline-block", data: { turbo_confirm: "Delete heading \"#{heading.title}\" and all its sub-headings?" } } %>
     </summary>
     <div>
       <% if heading.deadline %>
