Make editing nearly flawless

--- a/app/views/headings/edit.html.erb
+++ b/app/views/headings/edit.html.erb
@@ -1,7 +1,13 @@
 <h1>Editing heading</h1>
 
 <turbo-frame id="<%= dom_id @heading %>">
-  <%= render "form", heading: @heading, parent_id: @heading.parent.nil? ? nil : @heading.parent.id %>
+  <div data-controller="heading" data-heading-id-value="<%= @heading.id %>" style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(@heading.depth) %>; border-radius: 5px">
+    
+    <%= render "form", heading: @heading, parent_id: @heading.parent.nil? ? nil : @heading.parent.id %>
+    <% @heading.headings.each do |child| %>
+      <%= render child %>
+    <% end %>
+  </div>
 </turbo-frame>
 
 <br>
