--- a/app/views/headings/index.html.erb
+++ b/app/views/headings/index.html.erb
@@ -9,6 +9,6 @@
 </div>
 
 <%= form_with(model: Heading.new) do |form| %>
-  <%= form.text_field :title, placeholder: '+', style: 'border: none' %>
+  <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
   <%= form.hidden_field :parent_id, value: nil %>
 <% end %>
