Make key words strong in agenda

--- a/app/views/headings/_date.html.erb
+++ b/app/views/headings/_date.html.erb
@@ -2,9 +2,9 @@
   <strong><%= link_to heading.title, heading %></strong>
   <div>
     <% if heading.deadline %>
-      Deadline: <%= heading.deadline %>
+      <strong>Deadline:</strong> <%= heading.deadline %>
     <% elsif heading.scheduled %>
-      Scheduled: <%= heading.scheduled %>
+      <strong>Scheduled:</strong> <%= heading.scheduled %>
     <% else %>
       Not supposed to be here
     <% end %>
