Handle bullet points and indentation in text area

--- a/app/views/headings/_form.html.erb
+++ b/app/views/headings/_form.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <div class="mb-2">
-      <%= form.text_area :body, placeholder: "Body", class: "form-control", rows: 10 %>
+      <%= form.text_area :body, placeholder: "Body", class: "form-control", rows: 10, data: { controller: "heading-textarea", action: "keyup->heading-textarea#processInput" } %>
     </div>
 
     <%= form.hidden_field :parent_id, value: parent_id %>
