--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="<%= dom_id heading %>">
+<%= turbo_frame_tag heading do %>
   <div data-controller="heading" data-heading-id-value="<%= heading.id %>" class="pb-2 ps-2 mb-2 rounded-start" style="border-left: 3px solid <%= depth_color(heading.depth) %>">
     <details data-heading-target="details" data-action="heading#toggle">
       <summary>
@@ -45,4 +45,4 @@
     </details>
 
   </div>
-</turbo-frame>
+<% end %>
