--- a/app/views/headings/edit.html.erb
+++ b/app/views/headings/edit.html.erb
@@ -4,7 +4,7 @@
   <div style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(@heading.depth) %>; border-radius: 5px">
     
     <%= render "form", heading: @heading, parent_id: @heading.parent.nil? ? nil : @heading.parent.id %>
-    <% @heading.headings.each do |child| %>
+    <% @heading.children.each do |child| %>
       <%= render child %>
     <% end %>
   </div>
