Add color to todo states

--- a/app/views/heading_states/_heading_state.html.erb
+++ b/app/views/heading_states/_heading_state.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id heading_state %>">
   <p>
     <strong>Name:</strong>
-    <%= heading_state.name %>
+    <strong><span style="color: <%= heading_state.color %>"><%= heading_state.name %></span></strong>
   </p>
 
   <p>
