--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -36,9 +36,9 @@
           <%= render child %>
         <% end %>
 
-        <%= form_with(model: Heading.new) do |form| %>
+        <%= form_with(model: Heading.new(parent_id: heading.id)) do |form| %>
           <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
-          <%= form.hidden_field :parent_id, value: heading.id %>
+          <%= form.hidden_field :parent_id %>
         <% end %>
       </div>
 
