--- a/app/views/headings/edit.html.erb
+++ b/app/views/headings/edit.html.erb
@@ -3,7 +3,7 @@
 <%= turbo_frame_tag @heading do %>
   <div style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(@heading.depth) %>; border-radius: 5px">
     
-    <%= render "form", heading: @heading, parent_id: @heading.parent.nil? ? nil : @heading.parent.id %>
+    <%= render "form", heading: @heading %>
     <% @heading.children.each do |child| %>
       <%= render child %>
     <% end %>
