--- a/app/views/headings/index.html.erb
+++ b/app/views/headings/index.html.erb
@@ -10,5 +10,5 @@
 
 <%= form_with(model: Heading.new) do |form| %>
   <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
-  <%= form.hidden_field :parent_id, value: nil %>
+  <%= form.hidden_field :parent_id %>
 <% end %>
