Add dates_not_done scope to headings

--- a/app/views/headings/_date.html.erb
+++ b/app/views/headings/_date.html.erb
@@ -1,5 +1,10 @@
 <div>
-  <strong><%= link_to heading.title, heading %></strong>
+  <strong>
+    <% if heading.state %>
+      <span style="color: <%= heading.state.color %>"><%= heading.state.name %></span>
+    <% end %>
+    <%= link_to heading.title, heading %>
+  </strong>
   <div>
     <% if heading.deadline %>
       <strong>Deadline:</strong> <%= heading.deadline %>
