--- a/app/views/headings/agenda.html.erb
+++ b/app/views/headings/agenda.html.erb
@@ -2,8 +2,9 @@
 
 <h1>Agenda</h1>
 
-<ul id="dates" class="list-unstyled">
-  <%#= render "agenda_today", day: @headings_by_date.first %>
-  <%= render partial: "agenda_date", collection: @headings_by_date[0..], as: :day %>
-</ul>
-
+<%= turbo_frame_tag "agenda" do %>
+  <ul id="agenda-dates" class="list-unstyled">
+    <%#= render "agenda_today", day: @headings_by_date.first %>
+    <%= render partial: "agenda_date", collection: @headings_by_date[0..], as: :day %>
+  </ul>
+<% end %>
