--- a/app/views/headings/index.html.erb
+++ b/app/views/headings/index.html.erb
@@ -2,11 +2,13 @@
 
 <h1>Headings</h1>
 
-<div id="headings">
-  <% @headings.each do |heading| %>
-    <%= render heading %>
-  <% end %>
-</div>
+<%= turbo_frame_tag "headings" do %>
+  <div id="headings">
+    <% @headings.each do |heading| %>
+      <%= render heading %>
+    <% end %>
+  </div>
+<% end %>
 
 <%= form_with(model: Heading.new) do |form| %>
   <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
