--- a/app/views/headings/home.html.erb
+++ b/app/views/headings/home.html.erb
@@ -1,10 +1,10 @@
 <h1>Home</h1>
 
-<div class="row">
-  <div class="col">
+<div class="row" data-controller="home">
+  <div class="col" data-home-target="headings">
     <%= turbo_frame_tag "headings", src: headings_path %>
   </div>
-  <div class="col-auto">
+  <div class="col-auto" data-home-target="agenda">
     <%= turbo_frame_tag "agenda", src: agenda_path %>
   </div>
 </div>
