--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -13,7 +13,7 @@
         </small>
         <%= link_to '<i class="bi bi-pencil"></i>'.html_safe, edit_heading_path(heading) %>
         <%= link_to '<i class="bi bi-arrows-angle-expand"></i>'.html_safe, heading, data:  { turbo_frame: "headings" } %>
-        <%= link_to '<i class="bi bi-x-lg"></i>'.html_safe, heading, class: "text-danger", data: { turbo_method: :delete, turbo_confirm: "Delete heading \"#{heading.title}\" and all its sub-headings?" } %>
+        <%= button_to '<i class="bi bi-x-lg"></i>'.html_safe, heading, class: "text-danger", style: "border: none; background: none", form: { style: "display: inline", data: { turbo_confirm: "Delete heading \"#{heading.title}\" and all its sub-headings?" }}, method: :delete %>
       </summary>
       <div>
         <% if heading.deadline %>
