Move main agenda view to partial

--- a/app/views/headings/agenda.html.erb
+++ b/app/views/headings/agenda.html.erb
@@ -2,9 +2,4 @@
 
 <h1>Agenda</h1>
 
-<%= turbo_frame_tag "agenda" do %>
-  <ul id="agenda-dates" class="list-unstyled">
-    <%#= render "agenda_today", day: @headings_by_date.first %>
-    <%= render partial: "agenda_date", collection: @headings_by_date[0..], as: :day %>
-  </ul>
-<% end %>
+<%= render "agenda", date_headings: @date_headings %>
