--- a/app/views/headings/_agenda.html.erb
+++ b/app/views/headings/_agenda.html.erb
@@ -1,6 +1,4 @@
-<%= turbo_frame_tag "agenda" do %>
-  <ul id="agenda-dates" class="list-unstyled">
-    <%#= render "agenda_today", day: @headings_by_date.first %>
-    <%= render partial: "agenda_date", collection: date_headings[0..], as: :day %>
-  </ul>
-<% end %>
+<ul id="agenda-dates" class="list-unstyled">
+  <%#= render "agenda_today", day: @headings_by_date.first %>
+  <%= render partial: "agenda_date", collection: agenda_dates[0..], as: :day %>
+</ul>
