--- a/app/views/notebooks/_notebook.html.erb
+++ b/app/views/notebooks/_notebook.html.erb
@@ -1,7 +1,5 @@
-<div id="<%= dom_id notebook %>">
-  <p>
-    <strong>Title:</strong>
-    <%= notebook.title %>
-  </p>
-
-</div>
+<%= turbo_frame_tag notebook do %>
+  <% @notebook.headings.top_level.each do |heading| %>
+    <%= render heading %>
+  <% end %>
+<% end %>
