--- a/app/views/notebooks/show.html.erb
+++ b/app/views/notebooks/show.html.erb
@@ -1,6 +1,15 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @notebook %>
+<%= turbo_frame_tag "notebooks" do %>
+  <nav>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><%= link_to "Notebooks", notebooks_path %></li>
+      <li class="breadcrumb-item active"><%= @notebook.title %></li>
+    </ol>
+  </nav>
+
+  <%= render @notebook %>
+<% end %>
 
 <div>
   <%= link_to "Edit this notebook", edit_notebook_path(@notebook) %> |
