--- a/app/views/headings/_agenda.html.erb
+++ b/app/views/headings/_agenda.html.erb
@@ -1,4 +1,4 @@
 <ul id="agenda-dates" class="list-unstyled">
   <%#= render "agenda_today", day: @headings_by_date.first %>
-  <%= render partial: "agenda_date", collection: agenda_dates[0..], as: :day %>
+  <%= render partial: "headings/agenda_date", collection: agenda_dates[0..], as: :day %>
 </ul>
