--- a/app/views/notebooks/new.html.erb
+++ b/app/views/notebooks/new.html.erb
@@ -1,9 +1,10 @@
 <h1>New notebook</h1>
 
-<%= render "form", notebook: @notebook %>
+<%= turbo_frame_tag "notebooks" do %>
+  <%= render "form", notebook: @notebook %>
+  <br>
 
-<br>
-
-<div>
-  <%= link_to "Back to notebooks", notebooks_path %>
-</div>
+  <div>
+    <%= link_to "Back to notebooks", notebooks_path %>
+  </div>
+<% end %>
