Notebook editing and deleting, moving index to partial

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,12 +3,7 @@
 <div class="row" data-controller="home">
   <div class="col" data-home-target="headings">
     <%= turbo_frame_tag "notebooks" do %>
-      <% @notebooks.each do |notebook| %>
-        <%= link_to notebook.title, notebook %>
-      <% end %>
-      <div>
-        <%= link_to "New notebook", new_notebook_path %>
-      </div>
+      <%= render "notebooks/notebooks_index", notebooks: @notebooks %>
     <% end %>
   </div>
   <div class="col-auto" data-home-target="agenda">
