--- a/app/views/notebooks/_form.html.erb
+++ b/app/views/notebooks/_form.html.erb
@@ -1,22 +1,27 @@
-<%= form_with(model: notebook) do |form| %>
-  <% if notebook.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(notebook.errors.count, "error") %> prohibited this notebook from being saved:</h2>
+<div class="mb-2" style="width: 350px">
+  
+  <%= form_with(model: notebook) do |form| %>
+    <% if notebook.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(notebook.errors.count, "error") %> prohibited this notebook from being saved:</h2>
 
-      <ul>
-        <% notebook.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% notebook.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="row mb-2">
+      <div class="col">
+        <%= form.text_field :title, placeholder: "Title", class: "form-control" %>
+      </div>
+    </div>
+
+    <div>
+      <%= form.submit class: "btn btn-primary" %>
+      <%= link_to "Cancel", notebooks_path, class: "btn btn-secondary" %>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
