--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,12 +1,12 @@
 <h1>Home</h1>
 
 <div class="row" data-controller="home">
-  <div class="col" data-home-target="headings">
+  <div class="col-12 col-lg" data-home-target="headings">
     <%= turbo_frame_tag "notebooks" do %>
       <%= render "notebooks/notebooks_index", notebooks: @notebooks %>
     <% end %>
   </div>
-  <div class="col-auto" data-home-target="agenda">
+  <div class="col-12 col-lg-auto mb-3 order-first order-lg-last" data-home-target="agenda">
     <%= turbo_frame_tag "agenda", src: agenda_path do %>
       <%= render "headings/agenda", agenda_dates: @agenda_dates %>
     <% end %>
