--- a/app/views/headings/_heading.org.erb
+++ b/app/views/headings/_heading.org.erb
@@ -1,3 +1,3 @@
 <%= '*' * heading.depth %> <%= "#{heading.state.name} ".html_safe if heading.state %><%= heading.title.html_safe %>
-<%= (depth_spaces(heading.depth, deadline_scheduled_line(heading)) + "\n").html_safe if heading.dates? %><%= (depth_spaces(heading.depth, heading.body).chomp + "\n").html_safe if heading.body %>
+<%= (depth_spaces(heading.depth, deadline_scheduled_line(heading)) + "\n").html_safe if heading.dates? || heading.closed_at %><%= (depth_spaces(heading.depth, heading.body).chomp + "\n").html_safe if heading.body %>
 <%= render heading.children -%>
