--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,8 @@
-<h1>Home</h1>
+<div class="row">
+  <div class="col">
+    <h1>Home</h1>
+  </div>
+</div>
 
 <div class="row" data-controller="home">
   <div class="col-12 col-lg" data-home-target="headings">
@@ -6,7 +10,7 @@
       <%= render "notebooks/notebooks_index", notebooks: @notebooks %>
     <% end %>
   </div>
-  <div class="col-12 col-lg-auto mb-3 order-first order-lg-last" data-home-target="agenda">
+  <div class="agenda-bar col-12 col-lg-auto order-first order-lg-last" data-home-target="agenda">
     <%= turbo_frame_tag "agenda", src: agenda_path do %>
       <%= render "headings/agenda", agenda_dates: @agenda_dates %>
     <% end %>
