--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 .agenda-bar {
-  box-shadow: inset 18px 0 10px -20px #626262;
-  background-color: #f0f0f0;
-  border-left: 1px solid #aaa;
+  box-shadow: inset 18px 0 10px -20px rgba($black, .15);
 }
