--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <div class="col-12 col-lg-auto order-first order-lg-last" data-home-target="agenda">
           <div class="row">
             <div class="col card shadow-sm bg-light p-3 pb-0">
-              <%= turbo_frame_tag "agenda", src: agenda_path do %>
+              <%= turbo_frame_tag "agenda" do %>
                 <%= render "headings/agenda", agenda_dates: Heading.agenda_dates %>
               <% end %>
             </div>
